<resources>
    <string name="app_name">MyMoment</string>
    <string name="welcome_message">Welcome to MyMoment</string>
    <string name="add_diary">Add Diary</string>
    <string name="create_diary_title">New Diary</string>
    <string name="edit_diary_title">Edit Diary</string>
    <string name="diary_title_hint">Title</string>
    <string name="diary_content_hint">Content</string>
    <string name="weather_label">Weather</string>
    <string name="temperature_hint">Temperature (°C)</string>
    <string name="location_label">Current Location</string>
    <string name="btn_pick_location">Pick Location</string>
    <string name="save_diary">Save</string>
    <string name="update_diary">Update</string>
    <string name="title_required">Please enter a title</string>
    <string name="content_required">Please enter content</string>
    <string name="diary_saved_success">Diary saved</string>
    <string name="diary_saved_failed">Failed to save: %1$s</string>
    <string name="diary_update_success">Diary updated</string>
    <string name="diary_update_failed">Failed to update: %1$s</string>
    <string name="diary_delete_success">Diary deleted</string>
    <string name="diary_delete_failed">Delete failed, please retry</string>
    <string name="diary_location_unknown">Unknown location</string>
    <string name="empty_diary_message">No diary yet. Tap the button to start recording.</string>
    <string name="more_actions">More</string>
    <string name="drawer_subtitle">Capture every moment</string>
    <string name="menu_all_diaries">All Diaries</string>
    <string name="menu_diary_map">Diary Map</string>
    <string name="menu_settings">Preferences</string>
    <string name="menu_toggle_theme">Dark Mode</string>
    <string name="menu_toggle_font">Large Font Mode</string>
    <string name="menu_logout">Log Out</string>
    <string name="action_edit">Edit</string>
    <string name="action_delete">Delete</string>
    <string name="action_search">Search</string>
    <string name="action_login">Login</string>
    <string name="hint_username">Username</string>
    <string name="hint_password">Password</string>
    <string name="login_success">Login successful</string>
    <string name="login_required">Please enter username and password</string>
    <string name="location_permission_required">Location permission is required</string>
    <string name="location_fetch_failed">Failed to fetch location: %1$s</string>
    <string name="weather_sunny">Sunny</string>
    <string name="weather_cloudy">Cloudy</string>
    <string name="weather_rainy">Rainy</string>
    <string name="weather_snowy">Snowy</string>
    <string name="weather_windy">Windy</string>
    <string name="amap_api_key">Place your AMap server key here</string>
    <string name="map_no_markers">No location data yet. Please add a diary with location.</string>
    <string name="map_load_failed">Failed to load map data: %1$s</string>
</resources>