<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_all_diaries"
            android:title="@string/menu_all_diaries"
            android:icon="@drawable/ic_menu_diary" />
        <item
            android:id="@+id/nav_map"
            android:title="@string/menu_diary_map"
            android:icon="@drawable/ic_menu_map" />
    </group>

    <item android:title="@string/menu_settings">
        <menu>
            <item
                android:id="@+id/nav_toggle_theme"
                android:title="@string/menu_toggle_theme"
                android:icon="@drawable/ic_menu_theme" />
            <item
                android:id="@+id/nav_toggle_font"
                android:title="@string/menu_toggle_font"
                android:icon="@drawable/ic_menu_font" />
        </menu>
    </item>

    <item
        android:id="@+id/nav_logout"
        android:title="@string/menu_logout"
        android:icon="@drawable/ic_menu_logout" />

</menu>

